Normalize fields of post resource operations #9
