# controllers/grafeas_occurrences_controller.py
@@ -1,7 +1,7 @@
 import connexion
 from http import HTTPStatus
 from .common import get_store
-from .common import build_project_doc_id, build_note_doc_id, build_occurrence_doc_id
+from .common import build_project_doc_id, build_note_doc_id, build_occurrence_doc_id, build_occurrence_name
 from .common import build_result, build_error
 
 
@@ -20,18 +20,22 @@ def create_occurrence(project_id, body):
     if 'Account' not in connexion.request.headers:
         return build_error(HTTPStatus.BAD_REQUEST, "'Account' header is missing")
 
-    if 'name' not in body:
-        return build_error(HTTPStatus.BAD_REQUEST, "Occurrence 'name' is missing")
+    if 'occurrence_id' not in body:
+        return build_error(HTTPStatus.BAD_REQUEST, "Occurrence's 'occurrence_id' field is missing")
 
     if 'noteName' not in body:
-        return build_error(HTTPStatus.BAD_REQUEST, "Occurrence 'noteName' is missing")
+        return build_error(HTTPStatus.BAD_REQUEST, "Occurrence's 'noteName' field is missing")
 
     store = get_store()
     account_id = connexion.request.headers['Account']
-    occurrence_doc_id = "{}/{}".format(account_id, body["name"])
+    occurrence_id = body['occurrence_id']
+    occurrence_doc_id = build_occurrence_doc_id(account_id, project_id, occurrence_id)
     project_doc_id = build_project_doc_id(account_id, project_id)
     note_doc_id = "{}/{}".format(account_id, body['noteName'])
     body['doc_type'] = 'Occurrence'
+    body['project_id'] = project_id
+    body['occurrence_id'] = occurrence_id
+    body['name'] = build_occurrence_name(project_id, occurrence_id)
     body['project_doc_id'] = project_doc_id
     body['note_doc_id'] = note_doc_id
 
@@ -164,6 +168,4 @@ def _clean_doc(doc):
     doc.pop('_rev', None)
     doc.pop('doc_type', None)
     doc.pop('account_id', None)
-    doc.pop('project_doc_id', None)
-    doc.pop('note_doc_id', None)
     return doc
